actualizacion de estilos

--- a/pages/find-us.html
+++ b/pages/find-us.html
@@ -53,50 +53,52 @@
     <main>
         <h1> Find Us </h1>
         
-        <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate quibusdam omnis quaerat expedita ratione corrupti explicabo vitae praesentium distinctio, tempora, eius facere? Molestiae recusandae quod illum, voluptate natus repellat amet!</p>
+        <p> Nos pueden encontrar en una Galería en el Centro de la Ciudad de Buenos Aires, en el ala B del Museo de las Bellas Artes, donde se exponen todos los cuadros realizados por la artista.</p>
         
         <div class="location">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.797528330658!2d-58.39558468860421!3d-34.583989372848606!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccaa199c2f643%3A0x49e543b8331abe7d!2sMuseo%20Nacional%20de%20Bellas%20Artes!5e0!3m2!1ses-419!2sar!4v1719793604844!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
 
         <section>
-            <h2> Section </h2>
-            <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Provident consectetur ipsa praesentium quos sed facilis cum dolorem rem consequuntur tempora recusandae numquam omnis atque, optio sunt ea repudiandae vero accusantium.</p>
+            <h2> Otros Puntos </h2>
+            <p> Además de encontrarnos en la Galería ubicada en el centro de la Capital Federal de Buenos Aires, nos pueden encontrar en diversas galerías ubicadas en distintos puntos de la Ciudad. </p>
             <div>
-                <h3> sub-section</h3>
-                <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus, quasi! Praesentium minima fugit fuga, deserunt doloribus iure nisi officiis voluptatem sunt voluptates commodi, impedit magnam dignissimos temporibus saepe alias totam.</p>    
+                <h3> Galería Artes</h3>
+                <p> Alli, encontraran los cuadros realizados durante la epoca del 2000, con detalles de materiales que sólo se encontraban en esa época</p>    
             </div>
          </section>
 
          <!-- Bootrasp Section -->
 
-        <section>
-            <div class="accordion" id="accordionExample">
-                <div class="accordion-item">
-                  <h2 class="accordion-header">
-                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                      Accordion Item #1
-                    </button>
-                  </h2>
-                  <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
-                    <div class="accordion-body">
-                      <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
-                    </div>
-                  </div>
-                </div>
-                <div class="accordion-item">
-                  <h2 class="accordion-header">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                      Accordion Item #2
-                    </button>
-                  </h2>
-                  <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-                    <div class="accordion-body">
-                      <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
-                    </div>
-                  </div>
-                </div>
-              </div>
+         <h3 class="pre-bt-title"> Sobre nuestros Productos </h3>
+
+         <section class="cards-section">
+          <div class="card-bs">
+            <img src="../img/cuatro-oceanos.JPG" class="card-img-top" alt="Serie oceanos, cuatro cuadros de lineas pintadas en rojo y blanco representando algas marinas sobre lienzo">
+            <div class="card-body">
+              <h5 class="card-title">Cuatro Oceanos</h5>
+              <p class="card-text">Serie oceanos, cuatro cuadros de lineas pintadas en rojo y blanco representando algas marinas sobre lienzo</p>
+              <a href="pages/products.html" class="btn btn-primary">Browse Products</a>
+            </div>
+          </div>
+
+          <div class="card-bs">
+            <img src="../img/cuatro-oceanos.JPG" class="card-img-top" alt="Serie oceanos, cuatro cuadros de lineas pintadas en rojo y blanco representando algas marinas sobre lienzo">
+            <div class="card-body">
+              <h5 class="card-title">Cuatro Oceanos</h5>
+              <p class="card-text">Serie oceanos, cuatro cuadros de lineas pintadas en rojo y blanco representando algas marinas sobre lienzo</p>
+              <a href="pages/products.html" class="btn btn-primary">Browse Products</a>
+            </div>
+          </div>
+
+          <div class="card-bs">
+            <img src="../img/cuatro-oceanos.JPG" class="card-img-top" alt="Serie oceanos, cuatro cuadros de lineas pintadas en rojo y blanco representando algas marinas sobre lienzo">
+            <div class="card-body">
+              <h5 class="card-title">Cuatro Oceanos</h5>
+              <p class="card-text">Serie oceanos, cuatro cuadros de lineas pintadas en rojo y blanco representando algas marinas sobre lienzo</p>
+              <a href="pages/products.html" class="btn btn-primary">Browse Products</a>
+            </div>
+          </div>
         </section>
     </main>
 
