--- a/index.html
+++ b/index.html
@@ -57,52 +57,42 @@
 
         <h1>VPV.art</h1>
 
-        <p class="first-description"> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consectetur nam eum nesciunt, beatae iste molestias, quam ad nobis a cupiditate, dignissimos ducimus ratione. Ut doloremque cum praesentium alias. Doloribus, tenetur?</p>
+        <p> Valentina Poblet Videla es una artista nacida en los 90, que luego de varios viajes donde estuvo cerca del Océano, comenzó a pintar distintos elementos que veía y le recordaban al mismo. Durante sus viajes fue recopilando diversos recuerdos que luego fue dejando plasmados en sus cuadros </p>
 
-        <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et magni id repellendus qui amet beatae impedit perspiciatis odio exercitationem molestias nisi esse, eos corporis eveniet voluptates omnis voluptatum vero numquam!</p>
+        <p> El color que predomina en sus pinturas es el rojo, y además, siempre trabaja sobre líneas para desarrollar los elementos.</p>
 
-        <section>
-            <h2> Section </h2>
-            <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Provident consectetur ipsa praesentium quos sed facilis cum dolorem rem consequuntur tempora recusandae numquam omnis atque, optio sunt ea repudiandae vero accusantium.</p>
-            <div class="index-section">
-                <h3> sub-section</h3>
-                <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus, quasi! Praesentium minima fugit fuga, deserunt doloribus iure nisi officiis voluptatem sunt voluptates commodi, impedit magnam dignissimos temporibus saepe alias totam.</p>    
+         <!-- Bootstrap section -->
+
+         <h3 class="pre-bt-title"> Sobre nuestros Productos </h3>
+
+        <section class="cards-section">
+          <div class="card-bs">
+            <img src="../pre-entrega/img/cuatro-oceanos.JPG" class="card-img-top" alt="Serie oceanos, cuatro cuadros de lineas pintadas en rojo y blanco representando algas marinas sobre lienzo">
+            <div class="card-body">
+              <h5 class="card-title">Cuatro Oceanos</h5>
+              <p class="card-text">Serie oceanos, cuatro cuadros de lineas pintadas en rojo y blanco representando algas marinas sobre lienzo</p>
+              <a href="pages/products.html" class="btn btn-primary">Browse Products</a>
             </div>
-            <div class="index-section">
-                <h3> sub-section</h3>
-                <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus, quasi! Praesentium minima fugit fuga, deserunt doloribus iure nisi officiis voluptatem sunt voluptates commodi, impedit magnam dignissimos temporibus saepe alias totam.</p>    
-            </div>
-         </section>
+          </div>
 
-         <!-- Boostrap section -->
-        <section>
-            <div class="accordion" id="accordionExample">
-                <div class="accordion-item">
-                  <h2 class="accordion-header">
-                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                      Accordion Item #1
-                    </button>
-                  </h2>
-                  <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
-                    <div class="accordion-body">
-                      <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
-                    </div>
-                  </div>
-                </div>
-                <div class="accordion-item">
-                  <h2 class="accordion-header">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                      Accordion Item #2
-                    </button>
-                  </h2>
-                  <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-                    <div class="accordion-body">
-                      <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
-                    </div>
-                  </div>
-                </div>
-              </div>
-        </section>       
+          <div class="card-bs">
+            <img src="../pre-entrega/img/cuatro-oceanos.JPG" class="card-img-top" alt="Serie oceanos, cuatro cuadros de lineas pintadas en rojo y blanco representando algas marinas sobre lienzo">
+            <div class="card-body">
+              <h5 class="card-title">Cuatro Oceanos</h5>
+              <p class="card-text">Serie oceanos, cuatro cuadros de lineas pintadas en rojo y blanco representando algas marinas sobre lienzo</p>
+              <a href="pages/products.html" class="btn btn-primary">Browse Products</a>
+            </div>
+          </div>
+
+          <div class="card-bs">
+            <img src="../pre-entrega/img/cuatro-oceanos.JPG" class="card-img-top" alt="Serie oceanos, cuatro cuadros de lineas pintadas en rojo y blanco representando algas marinas sobre lienzo">
+            <div class="card-body">
+              <h5 class="card-title">Cuatro Oceanos</h5>
+              <p class="card-text">Serie oceanos, cuatro cuadros de lineas pintadas en rojo y blanco representando algas marinas sobre lienzo</p>
+              <a href="pages/products.html" class="btn btn-primary">Browse Products</a>
+            </div>
+          </div>
+        </section>
      </main>
 
      <!-- pie de pagina -->
