--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -53,48 +53,49 @@
     <main>
         <h1> About Us </h1>
 
-        <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate quibusdam omnis quaerat expedita ratione corrupti explicabo vitae praesentium distinctio, tempora, eius facere? Molestiae recusandae quod illum, voluptate natus repellat amet!</p>
+        <p> pequeños detalles de la vida costera que a menudo pasan desapercibidos, Valentina empezó a pintar elementos que capturan la esencia del océano y su entorno. Su obra refleja una profunda conexión con el agua, y cada pieza es un recuerdo o una emoción evocada por su tiempo cerca del mar.</p>
 
         <section>
-            <h2> Section </h2>
-            <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Provident consectetur ipsa praesentium quos sed facilis cum dolorem rem consequuntur tempora recusandae numquam omnis atque, optio sunt ea repudiandae vero accusantium.</p>
+            <h2> Viajes </h2>
+            <p> A lo largo de sus viajes, Valentina fue recopilando diversos objetos—conchas, madera flotante, fragmentos de coral—que se convirtieron en la base de su expresión artística. Estos elementos, impregnados con el espíritu del océano, están sutilmente integrados en sus pinturas.</p>
             <div>
-                <h3> sub-section</h3>
-                <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus, quasi! Praesentium minima fugit fuga, deserunt doloribus iure nisi officiis voluptatem sunt voluptates commodi, impedit magnam dignissimos temporibus saepe alias totam.</p>    
+                <h3> Colores y Patrones</h3>
+                <p> El color predominante en su obra es un intenso rojo, que simboliza tanto la pasión como la intensidad que siente por su tema. Su enfoque único implica desarrollar cada elemento con líneas cuidadosamente trazadas, creando un juego dinámico entre lo estructurado y lo orgánico, tal como es el océano mismo. Las pinturas de Valentina no son solo representaciones visuales, sino una invitación a experimentar las emociones e historias del mar a través de sus ojos.</p>    
             </div>            
          </section>
 
          <!-- Bootrasp Section -->
 
-        <section>
-            <div class="accordion" id="accordionExample">
-                <div class="accordion-item">
-                  <h2 class="accordion-header">
-                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                      Accordion Item #1
-                    </button>
-                  </h2>
-                  <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
-                    <div class="accordion-body">
-                      <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
-                    </div>
-                  </div>
-                </div>
-                <div class="accordion-item">
-                  <h2 class="accordion-header">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                      Accordion Item #2
-                    </button>
-                  </h2>
-                  <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-                    <div class="accordion-body">
-                      <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
-                    </div>
-                  </div>
-                </div>
-              </div>
-        </section>
-        
+         <h3 class="pre-bt-title"> Sobre nuestros Productos </h3>
+
+         <section class="cards-section">
+          <div class="card-bs">
+            <img src="../img/cuatro-oceanos.JPG" class="card-img-top" alt="Serie oceanos, cuatro cuadros de lineas pintadas en rojo y blanco representando algas marinas sobre lienzo">
+            <div class="card-body">
+              <h5 class="card-title">Cuatro Oceanos</h5>
+              <p class="card-text">Serie oceanos, cuatro cuadros de lineas pintadas en rojo y blanco representando algas marinas sobre lienzo</p>
+              <a href="pages/products.html" class="btn btn-primary">Browse Products</a>
+            </div>
+          </div>
+
+          <div class="card-bs">
+            <img src="../img/cuatro-oceanos.JPG" class="card-img-top" alt="Serie oceanos, cuatro cuadros de lineas pintadas en rojo y blanco representando algas marinas sobre lienzo">
+            <div class="card-body">
+              <h5 class="card-title">Cuatro Oceanos</h5>
+              <p class="card-text">Serie oceanos, cuatro cuadros de lineas pintadas en rojo y blanco representando algas marinas sobre lienzo</p>
+              <a href="pages/products.html" class="btn btn-primary">Browse Products</a>
+            </div>
+          </div>
+
+          <div class="card-bs">
+            <img src="../img/cuatro-oceanos.JPG" class="card-img-top" alt="Serie oceanos, cuatro cuadros de lineas pintadas en rojo y blanco representando algas marinas sobre lienzo">
+            <div class="card-body">
+              <h5 class="card-title">Cuatro Oceanos</h5>
+              <p class="card-text">Serie oceanos, cuatro cuadros de lineas pintadas en rojo y blanco representando algas marinas sobre lienzo</p>
+              <a href="pages/products.html" class="btn btn-primary">Browse Products</a>
+            </div>
+          </div>
+        </section> 
     </main>
 
     <footer>
