--- a/pages/help-center.html
+++ b/pages/help-center.html
@@ -50,51 +50,49 @@
     </header>
 
     <main> 
-        <h1> Help Center </h1>
+        <h1> Servicios </h1>
         
-        <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate quibusdam omnis quaerat expedita ratione corrupti explicabo vitae praesentium <strong> valor </strong> distinctio, tempora, eius facere? Molestiae recusandae quod illum, voluptate natus repellat amet!</p>
+        <p> La Artista brinda distintos tipos de Servicios, debajo se describen los mismos y en caso de solicitar alguno, se pueden contactar directamente con la línea telefónica de 0800-Artista.</p>
         
         <section class="help-center-section">
-            <h2> Section </h2>
-            <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Provident consectetur ipsa praesentium quos sed facilis cum dolorem rem consequuntur tempora recusandae numquam omnis atque, optio sunt ea repudiandae vero accusantium.</p>
+            <h2> Compra de Cuadros </h2>
+            <p> Si se desea comprar algún cuadro, se puede llamar directamente al teléfono, indicando el cuadro, y se procederá solicitando los datos. En caso de solicitar envíos, corren por cuenta del comprador</p>
             <div class="help-center-sub-section">
-                <h3> Check 1 </h3>
-                <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus, quasi! Praesentium minima fugit fuga, deserunt doloribus iure nisi officiis voluptatem sunt voluptates commodi, impedit magnam dignissimos temporibus saepe alias totam.</p>
-            </div>
-            <div class="help-center-sub-section">
-                <h3> Check 2 </h3>
-                <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus, quasi! Praesentium minima fugit fuga, deserunt doloribus iure nisi officiis voluptatem sunt voluptates commodi, impedit magnam dignissimos temporibus saepe alias totam.</p>      
-            </div>
+                <h3> Clases </h3>
+                <p> La Artista brinda clases en un centro de arte, ubicado en el barrio de Colegiales. Al comunicarse al teléfono, también pueden solicitar horarios, y días de las clases grupales.</p>
          </section>
 
          <!-- Bootrasp Section -->
-        <section>
-            <div class="accordion" id="accordionExample">
-                <div class="accordion-item">
-                  <h2 class="accordion-header">
-                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                      Accordion Item #1
-                    </button>
-                  </h2>
-                  <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
-                    <div class="accordion-body">
-                      <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
-                    </div>
-                  </div>
-                </div>
-                <div class="accordion-item">
-                  <h2 class="accordion-header">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                      Accordion Item #2
-                    </button>
-                  </h2>
-                  <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-                    <div class="accordion-body">
-                      <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
-                    </div>
-                  </div>
-                </div>
-              </div>
+
+         <h3 class="pre-bt-title"> Sobre nuestros Productos </h3>
+
+         <section class="cards-section">
+          <div class="card-bs">
+            <img src="../img/cuatro-oceanos.JPG" class="card-img-top" alt="Serie oceanos, cuatro cuadros de lineas pintadas en rojo y blanco representando algas marinas sobre lienzo">
+            <div class="card-body">
+              <h5 class="card-title">Cuatro Oceanos</h5>
+              <p class="card-text">Serie oceanos, cuatro cuadros de lineas pintadas en rojo y blanco representando algas marinas sobre lienzo</p>
+              <a href="pages/products.html" class="btn btn-primary">Browse Products</a>
+            </div>
+          </div>
+
+          <div class="card-bs">
+            <img src="../img/cuatro-oceanos.JPG" class="card-img-top" alt="Serie oceanos, cuatro cuadros de lineas pintadas en rojo y blanco representando algas marinas sobre lienzo">
+            <div class="card-body">
+              <h5 class="card-title">Cuatro Oceanos</h5>
+              <p class="card-text">Serie oceanos, cuatro cuadros de lineas pintadas en rojo y blanco representando algas marinas sobre lienzo</p>
+              <a href="pages/products.html" class="btn btn-primary">Browse Products</a>
+            </div>
+          </div>
+
+          <div class="card-bs">
+            <img src="../img/cuatro-oceanos.JPG" class="card-img-top" alt="Serie oceanos, cuatro cuadros de lineas pintadas en rojo y blanco representando algas marinas sobre lienzo">
+            <div class="card-body">
+              <h5 class="card-title">Cuatro Oceanos</h5>
+              <p class="card-text">Serie oceanos, cuatro cuadros de lineas pintadas en rojo y blanco representando algas marinas sobre lienzo</p>
+              <a href="pages/products.html" class="btn btn-primary">Browse Products</a>
+            </div>
+          </div>
         </section>
     </main>
 
