--- a/pages/products.html
+++ b/pages/products.html
@@ -70,39 +70,42 @@
             <div class="photo">
                 <img src="../img/cuatro-oceanos.JPG" alt="Serie oceanos, cuatro cuadros de lineas pintadas en rojo y blanco representando algas marinas sobre lienzo">
             </div>
+            <div class="photo">
+                <img src="../img/flor-roja-lineas.JPG" alt="Cuadro de flor roja pintada con tinta china, en formato de lineas sobre lienzo">
+            </div>
           </div>      
         </section>
 
-        <!-- Bootrasp Section -->
+        <!-- Bootstrap Section -->
 
-        <section>
-            <div class="accordion" id="accordionExample">
-                <div class="accordion-item">
-                  <h2 class="accordion-header">
-                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                      Accordion Item #1
-                    </button>
-                  </h2>
-                  <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
-                    <div class="accordion-body">
-                      <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
-                    </div>
-                  </div>
-                </div>
-                <div class="accordion-item">
-                  <h2 class="accordion-header">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                      Accordion Item #2
-                    </button>
-                  </h2>
-                  <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-                    <div class="accordion-body">
-                      <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
-                    </div>
-                  </div>
-                </div>
-              </div>
+        <h3 class="pre-bt-title"> Sobre nuestros Productos </h3>
+
+        <section class="cards-section">
+          <div class="card-bs">
+            <img src="../img/cuatro-oceanos.JPG" class="card-img-top" alt="Serie oceanos, cuatro cuadros de lineas pintadas en rojo y blanco representando algas marinas sobre lienzo">
+            <div class="card-body">
+              <h5 class="card-title">Cuatro Oceanos</h5>
+              <p class="card-text">Serie oceanos, cuatro cuadros de lineas pintadas en rojo y blanco representando algas marinas sobre lienzo</p>
+            </div>
+          </div>
+
+          <div class="card-bs">
+            <img src="../img/cuatro-oceanos.JPG" class="card-img-top" alt="Serie oceanos, cuatro cuadros de lineas pintadas en rojo y blanco representando algas marinas sobre lienzo">
+            <div class="card-body">
+              <h5 class="card-title">Cuatro Oceanos</h5>
+              <p class="card-text">Serie oceanos, cuatro cuadros de lineas pintadas en rojo y blanco representando algas marinas sobre lienzo</p>
+            </div>
+          </div>
+
+          <div class="card-bs">
+            <img src="../img/cuatro-oceanos.JPG" class="card-img-top" alt="Serie oceanos, cuatro cuadros de lineas pintadas en rojo y blanco representando algas marinas sobre lienzo">
+            <div class="card-body">
+              <h5 class="card-title">Cuatro Oceanos</h5>
+              <p class="card-text">Serie oceanos, cuatro cuadros de lineas pintadas en rojo y blanco representando algas marinas sobre lienzo</p>
+            </div>
+          </div>
         </section>
+
     </main>
 
     <footer>
