--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -12,7 +12,7 @@
      <link rel="stylesheet" href="../css/style.css">
 
 
-    <title>Document</title>
+    <title>About Us</title>
 </head>
 <body>
     <header>
