--- a/pages/help-center.html
+++ b/pages/help-center.html
@@ -11,7 +11,7 @@
      <!-- link a CSS -->
      <link rel="stylesheet" href="../css/style.css">
 
-    <title>Document</title>
+    <title>Help Center</title>
 </head>
 <body>
     <header>
