--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -53,7 +53,7 @@
     <main>
         <h1> About Us </h1>
 
-        <p> pequeños detalles de la vida costera que a menudo pasan desapercibidos, Valentina empezó a pintar elementos que capturan la esencia del océano y su entorno. Su obra refleja una profunda conexión con el agua, y cada pieza es un recuerdo o una emoción evocada por su tiempo cerca del mar.</p>
+        <p> Valentina Poblet Videla, nacida en los años 90, es una artista cuya pasión por el océano comenzó durante sus extensos viajes por regiones costeras. Inspirada por la inmensidad del mar y los pequeños detalles de la vida costera que a menudo pasan desapercibidos, Valentina empezó a pintar elementos que capturan la esencia del océano y su entorno. Su obra refleja una profunda conexión con el agua, y cada pieza es un recuerdo o una emoción evocada por su tiempo cerca del mar.</p>
 
         <section>
             <h2> Viajes </h2>
