Cambios de imagenes, tablet, hover mouse

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Valentina-arte provee información sobre los Productos y Servicios que brinda la artista Valentina Poblet Videla, la misma vende sus cuadros y también ofrece clases/workshops de arte.">
+    <meta name="keywords" content="arte, art, cuadros, workshop de arte, clases de arte">
 
     <!-- Link de Bootstrap-->
 
@@ -11,14 +13,14 @@
     <!-- link a CSS -->
    <link rel="stylesheet" href="css/style.css">
 
-    <title> Home VPV.art </title>
+    <title> Home - VPV.art </title>
 
 </head>
 <body>
     <!-- banner principal -->
      <header> 
         <!-- img -->
-         <img src="../pre-entrega/img/VPVart-logo.png" alt="logo con patron de curvas abstractas en color negro">
+         <img src="./img/VPVart-logo.png" alt="logo con patron de curvas abstractas en color negro">
          <!-- menu de navegacion -->
          <nav class="nav-bar">
             <ul>
@@ -57,9 +59,9 @@
 
         <h1>VPV.art</h1>
 
-        <p> Valentina Poblet Videla es una artista nacida en los 90, que luego de varios viajes donde estuvo cerca del Océano, comenzó a pintar distintos elementos que veía y le recordaban al mismo. Durante sus viajes fue recopilando diversos recuerdos que luego fue dejando plasmados en sus cuadros </p>
+        <p class="text-subtitle"> Valentina Poblet Videla es una artista nacida en los 90, que luego de varios viajes donde estuvo cerca del Océano, comenzó a pintar distintos elementos que veía y le recordaban al mismo. Durante sus viajes fue recopilando diversos recuerdos que luego fue dejando plasmados en sus cuadros. </p>
 
-        <p> El color que predomina en sus pinturas es el rojo, y además, siempre trabaja sobre líneas para desarrollar los elementos.</p>
+        <p class="text-subtitle"> El color que predomina en sus pinturas es el rojo, y además, siempre trabaja sobre líneas para desarrollar los elementos.</p>
 
          <!-- Bootstrap section -->
 
@@ -67,28 +69,28 @@
 
         <section class="cards-section">
           <div class="card-bs">
-            <img src="../pre-entrega/img/cuatro-oceanos.JPG" class="card-img-top" alt="Serie oceanos, cuatro cuadros de lineas pintadas en rojo y blanco representando algas marinas sobre lienzo">
+            <img src="./img/cuatro-oceanos.JPG" class="card-img-top" alt="Serie Océanos, cuatro cuadros de lineas pintadas en rojo y blanco representando algas marinas sobre lienzo">
             <div class="card-body">
-              <h5 class="card-title">Cuatro Oceanos</h5>
-              <p class="card-text">Serie oceanos, cuatro cuadros de lineas pintadas en rojo y blanco representando algas marinas sobre lienzo</p>
+              <h5 class="card-title">Cuatro Océanos</h5>
+              <p class="card-text">Cuadros Serie Océanos, inspirado en Hawaii.</p>
               <a href="pages/products.html" class="btn btn-primary">Browse Products</a>
             </div>
           </div>
 
           <div class="card-bs">
-            <img src="../pre-entrega/img/cuatro-oceanos.JPG" class="card-img-top" alt="Serie oceanos, cuatro cuadros de lineas pintadas en rojo y blanco representando algas marinas sobre lienzo">
+            <img src="./img/algas-marinas-oceano.jpeg" class="card-img-top" alt="Cuadro de la serie Océanos, algas marinas, líneas pintadas en rojo y blanco, sobre lienzo">
             <div class="card-body">
-              <h5 class="card-title">Cuatro Oceanos</h5>
-              <p class="card-text">Serie oceanos, cuatro cuadros de lineas pintadas en rojo y blanco representando algas marinas sobre lienzo</p>
+              <h5 class="card-title">Algas Marinas</h5>
+              <p class="card-text">Cuadros Serie Océanos, inspirado en Hawaii.</p>
               <a href="pages/products.html" class="btn btn-primary">Browse Products</a>
             </div>
           </div>
 
           <div class="card-bs">
-            <img src="../pre-entrega/img/cuatro-oceanos.JPG" class="card-img-top" alt="Serie oceanos, cuatro cuadros de lineas pintadas en rojo y blanco representando algas marinas sobre lienzo">
+            <img src="./img/flores-hawaianas-oceano.jpeg" class="card-img-top" alt="Cuadro de la serie Océanos, flores de Hawaii, líneas pintadas en rojo y blanco, sobre lienzo">
             <div class="card-body">
-              <h5 class="card-title">Cuatro Oceanos</h5>
-              <p class="card-text">Serie oceanos, cuatro cuadros de lineas pintadas en rojo y blanco representando algas marinas sobre lienzo</p>
+              <h5 class="card-title">Flores de Hawaii</h5>
+              <p class="card-text">Cuadros Serie Océanos, inspirado en Hawaii.</p>
               <a href="pages/products.html" class="btn btn-primary">Browse Products</a>
             </div>
           </div>
