--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Valentina-arte es una artista nacida en la Ciudad de Buenos Aires, que comercializa cuadros y brinda servicios como workshops y clases de arte para acercar el arte a aquellos que lo deseen.">
+    <meta name="keywords" content="arte, art, cuadros, workshop de arte, clases de arte">
 
     <!-- Link de Bootstrap-->
 
@@ -12,7 +14,7 @@
      <link rel="stylesheet" href="../css/style.css">
 
 
-    <title>About Us</title>
+    <title> About Us - VPV.art</title>
 </head>
 <body>
     <header>
@@ -53,14 +55,14 @@
     <main>
         <h1> About Us </h1>
 
-        <p> Valentina Poblet Videla, nacida en los años 90, es una artista cuya pasión por el océano comenzó durante sus extensos viajes por regiones costeras. Inspirada por la inmensidad del mar y los pequeños detalles de la vida costera que a menudo pasan desapercibidos, Valentina empezó a pintar elementos que capturan la esencia del océano y su entorno. Su obra refleja una profunda conexión con el agua, y cada pieza es un recuerdo o una emoción evocada por su tiempo cerca del mar.</p>
+        <p class="text-subtitle"> Valentina Poblet Videla, nacida en los años 90, es una artista cuya pasión por el océano comenzó durante sus extensos viajes por regiones costeras. Inspirada por la inmensidad del mar y los pequeños detalles de la vida costera que a menudo pasan desapercibidos, Valentina empezó a pintar elementos que capturan la esencia del océano y su entorno. Su obra refleja una profunda conexión con el agua, y cada pieza es un recuerdo o una emoción evocada por su tiempo cerca del mar.</p>
 
         <section>
             <h2> Viajes </h2>
-            <p> A lo largo de sus viajes, Valentina fue recopilando diversos objetos—conchas, madera flotante, fragmentos de coral—que se convirtieron en la base de su expresión artística. Estos elementos, impregnados con el espíritu del océano, están sutilmente integrados en sus pinturas.</p>
+            <p class="text-subtitle"> A lo largo de sus viajes, Valentina fue recopilando diversos objetos—conchas, madera flotante, fragmentos de coral—que se convirtieron en la base de su expresión artística. Estos elementos, impregnados con el espíritu del océano, están sutilmente integrados en sus pinturas.</p>
             <div>
                 <h3> Colores y Patrones</h3>
-                <p> El color predominante en su obra es un intenso rojo, que simboliza tanto la pasión como la intensidad que siente por su tema. Su enfoque único implica desarrollar cada elemento con líneas cuidadosamente trazadas, creando un juego dinámico entre lo estructurado y lo orgánico, tal como es el océano mismo. Las pinturas de Valentina no son solo representaciones visuales, sino una invitación a experimentar las emociones e historias del mar a través de sus ojos.</p>    
+                <p class="text-subtitle"> El color predominante en su obra es un intenso rojo, que simboliza tanto la pasión como la intensidad que siente por su tema. Su enfoque único implica desarrollar cada elemento con líneas cuidadosamente trazadas, creando un juego dinámico entre lo estructurado y lo orgánico, tal como es el océano mismo. Las pinturas de Valentina no son solo representaciones visuales, sino una invitación a experimentar las emociones e historias del mar a través de sus ojos.</p>    
             </div>            
          </section>
 
@@ -70,29 +72,29 @@
 
          <section class="cards-section">
           <div class="card-bs">
-            <img src="../img/cuatro-oceanos.JPG" class="card-img-top" alt="Serie oceanos, cuatro cuadros de lineas pintadas en rojo y blanco representando algas marinas sobre lienzo">
+            <img src="../img/cuatro-oceanos.JPG" class="card-img-top" alt="Serie Océanos, cuatro cuadros de lineas pintadas en rojo y blanco representando algas marinas sobre lienzo">
             <div class="card-body">
-              <h5 class="card-title">Cuatro Oceanos</h5>
-              <p class="card-text">Serie oceanos, cuatro cuadros de lineas pintadas en rojo y blanco representando algas marinas sobre lienzo</p>
-              <a href="pages/products.html" class="btn btn-primary">Browse Products</a>
+              <h5 class="card-title">Cuatro Océanos</h5>
+              <p class="card-text">Cuadros Serie Océanos, inspirado en Hawaii.</p>
+              <a href="../pages/products.html" class="btn btn-primary">Browse Products</a>
             </div>
           </div>
 
           <div class="card-bs">
-            <img src="../img/cuatro-oceanos.JPG" class="card-img-top" alt="Serie oceanos, cuatro cuadros de lineas pintadas en rojo y blanco representando algas marinas sobre lienzo">
+            <img src="../img/algas-marinas-oceano.jpeg" class="card-img-top" alt="Cuadro de la serie Océanos, algas marinas, líneas pintadas en rojo y blanco, sobre lienzo">
             <div class="card-body">
-              <h5 class="card-title">Cuatro Oceanos</h5>
-              <p class="card-text">Serie oceanos, cuatro cuadros de lineas pintadas en rojo y blanco representando algas marinas sobre lienzo</p>
-              <a href="pages/products.html" class="btn btn-primary">Browse Products</a>
+              <h5 class="card-title">Algas Marinas</h5>
+              <p class="card-text">Cuadros Serie Océanos, inspirado en Hawaii.</p>
+              <a href="../pages/products.html" class="btn btn-primary">Browse Products</a>
             </div>
           </div>
 
           <div class="card-bs">
-            <img src="../img/cuatro-oceanos.JPG" class="card-img-top" alt="Serie oceanos, cuatro cuadros de lineas pintadas en rojo y blanco representando algas marinas sobre lienzo">
+            <img src="../img/flores-hawaianas-oceano.jpeg" class="card-img-top" alt="Cuadro de la serie Océanos, flores de Hawaii, líneas pintadas en rojo y blanco, sobre lienzo">
             <div class="card-body">
-              <h5 class="card-title">Cuatro Oceanos</h5>
-              <p class="card-text">Serie oceanos, cuatro cuadros de lineas pintadas en rojo y blanco representando algas marinas sobre lienzo</p>
-              <a href="pages/products.html" class="btn btn-primary">Browse Products</a>
+              <h5 class="card-title">Flores de Hawaii</h5>
+              <p class="card-text">Cuadros Serie Océanos, inspirado en Hawaii.</p>
+              <a href="../pages/products.html" class="btn btn-primary">Browse Products</a>
             </div>
           </div>
         </section> 
