--- a/pages/find-us.html
+++ b/pages/find-us.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Valentina-arte tiene un taller que se encuentra en la zona de Palermo, dentro de la Ciudad de Buenos Aires, donde se puede ir a visitar sus obras.">
+    <meta name="keywords" content="arte, art, cuadros, workshop de arte, clases de arte">
 
     <!-- Link de Bootstrap-->
 
@@ -12,7 +14,7 @@
      <link rel="stylesheet" href="../css/style.css">
 
 
-    <title>Find Us</title>
+    <title> Find Us - VPV.art</title>
 </head>
 <body>
     <header>
@@ -53,7 +55,7 @@
     <main>
         <h1> Find Us </h1>
         
-        <p> Nos pueden encontrar en una Galería en el Centro de la Ciudad de Buenos Aires, en el ala B del Museo de las Bellas Artes, donde se exponen todos los cuadros realizados por la artista.</p>
+        <p class="text-subtitle"> Nos pueden encontrar en una Galería en el Centro de la Ciudad de Buenos Aires, en el ala B del Museo de las Bellas Artes, donde se exponen todos los cuadros realizados por la artista.</p>
         
         <div class="location">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.797528330658!2d-58.39558468860421!3d-34.583989372848606!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccaa199c2f643%3A0x49e543b8331abe7d!2sMuseo%20Nacional%20de%20Bellas%20Artes!5e0!3m2!1ses-419!2sar!4v1719793604844!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
@@ -61,10 +63,10 @@
 
         <section>
             <h2> Otros Puntos </h2>
-            <p> Además de encontrarnos en la Galería ubicada en el centro de la Capital Federal de Buenos Aires, nos pueden encontrar en diversas galerías ubicadas en distintos puntos de la Ciudad. </p>
+            <p class="text-subtitle"> Además de encontrarnos en la Galería ubicada en el centro de la Capital Federal de Buenos Aires, nos pueden encontrar en diversas galerías ubicadas en distintos puntos de la Ciudad. </p>
             <div>
-                <h3> Galería Artes</h3>
-                <p> Alli, encontraran los cuadros realizados durante la epoca del 2000, con detalles de materiales que sólo se encontraban en esa época</p>    
+                <h3> Galería 'Artes'</h3>
+                <p class="text-subtitle"> La Galería 'Artes', ubicada en Serrano 966, en el Barrio de Villa Crespo, cuenta con parte del repertorio de cuadros de la artista, realizados durante la época del 2000, con detalles de materiales que sólo se encontraban en esa época.</p>    
             </div>
          </section>
 
@@ -74,29 +76,29 @@
 
          <section class="cards-section">
           <div class="card-bs">
-            <img src="../img/cuatro-oceanos.JPG" class="card-img-top" alt="Serie oceanos, cuatro cuadros de lineas pintadas en rojo y blanco representando algas marinas sobre lienzo">
+            <img src="../img/cuatro-oceanos.JPG" class="card-img-top" alt="Serie Océanos, cuatro cuadros de lineas pintadas en rojo y blanco representando algas marinas sobre lienzo">
             <div class="card-body">
-              <h5 class="card-title">Cuatro Oceanos</h5>
-              <p class="card-text">Serie oceanos, cuatro cuadros de lineas pintadas en rojo y blanco representando algas marinas sobre lienzo</p>
-              <a href="pages/products.html" class="btn btn-primary">Browse Products</a>
+              <h5 class="card-title">Cuatro Océanos</h5>
+              <p class="card-text">Cuadros Serie Océanos, inspirado en Hawaii.</p>
+              <a href="../pages/products.html" class="btn btn-primary">Browse Products</a>
             </div>
           </div>
 
           <div class="card-bs">
-            <img src="../img/cuatro-oceanos.JPG" class="card-img-top" alt="Serie oceanos, cuatro cuadros de lineas pintadas en rojo y blanco representando algas marinas sobre lienzo">
+            <img src="../img/algas-marinas-oceano.jpeg" class="card-img-top" alt="Cuadro de la serie Océanos, algas marinas, líneas pintadas en rojo y blanco, sobre lienzo">
             <div class="card-body">
-              <h5 class="card-title">Cuatro Oceanos</h5>
-              <p class="card-text">Serie oceanos, cuatro cuadros de lineas pintadas en rojo y blanco representando algas marinas sobre lienzo</p>
-              <a href="pages/products.html" class="btn btn-primary">Browse Products</a>
+              <h5 class="card-title">Algas Marinas</h5>
+              <p class="card-text">Cuadros Serie Océanos, inspirado en Hawaii.</p>
+              <a href="../pages/products.html" class="btn btn-primary">Browse Products</a>
             </div>
           </div>
 
           <div class="card-bs">
-            <img src="../img/cuatro-oceanos.JPG" class="card-img-top" alt="Serie oceanos, cuatro cuadros de lineas pintadas en rojo y blanco representando algas marinas sobre lienzo">
+            <img src="../img/flores-hawaianas-oceano.jpeg" class="card-img-top" alt="Cuadro de la serie Océanos, flores de Hawaii, líneas pintadas en rojo y blanco, sobre lienzo">
             <div class="card-body">
-              <h5 class="card-title">Cuatro Oceanos</h5>
-              <p class="card-text">Serie oceanos, cuatro cuadros de lineas pintadas en rojo y blanco representando algas marinas sobre lienzo</p>
-              <a href="pages/products.html" class="btn btn-primary">Browse Products</a>
+              <h5 class="card-title">Flores de Hawaii</h5>
+              <p class="card-text">Cuadros Serie Océanos, inspirado en Hawaii.</p>
+              <a href="../pages/products.html" class="btn btn-primary">Browse Products</a>
             </div>
           </div>
         </section>
