--- a/pages/products.html
+++ b/pages/products.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Valentina-arte ofrece una gran variedad de cuadros que están a la venta, los mismos representan una alta gama de variaciones de elementos que se pueden encontrar en el océano o en la tierra misma.">
+    <meta name="keywords" content="arte, art, cuadros, workshop de arte, clases de arte">
 
     <!-- Link de Bootstrap-->
 
@@ -11,7 +13,7 @@
     <!-- link a CSS -->
     <link rel="stylesheet" href="../css/style.css">
 
-    <title>Products</title>
+    <title> Products - VPV.art</title>
 </head>
 <body>
     <header>
@@ -82,26 +84,26 @@
 
         <section class="cards-section">
           <div class="card-bs">
-            <img src="../img/cuatro-oceanos.JPG" class="card-img-top" alt="Serie oceanos, cuatro cuadros de lineas pintadas en rojo y blanco representando algas marinas sobre lienzo">
+            <img src="../img/cuatro-oceanos.JPG" class="card-img-top" alt="Serie Océanos, cuatro cuadros de lineas pintadas en rojo y blanco representando algas marinas sobre lienzo">
             <div class="card-body">
-              <h5 class="card-title">Cuatro Oceanos</h5>
-              <p class="card-text">Serie oceanos, cuatro cuadros de lineas pintadas en rojo y blanco representando algas marinas sobre lienzo</p>
+              <h5 class="card-title">Cuatro Océanos</h5>
+              <p class="card-text">Cuadros Serie Océanos, inspirado en Hawaii.</p>
             </div>
           </div>
 
           <div class="card-bs">
-            <img src="../img/cuatro-oceanos.JPG" class="card-img-top" alt="Serie oceanos, cuatro cuadros de lineas pintadas en rojo y blanco representando algas marinas sobre lienzo">
+            <img src="../img/algas-marinas-oceano.jpeg" class="card-img-top" alt="Cuadro de la serie Océanos, algas marinas, líneas pintadas en rojo y blanco, sobre lienzo">
             <div class="card-body">
-              <h5 class="card-title">Cuatro Oceanos</h5>
-              <p class="card-text">Serie oceanos, cuatro cuadros de lineas pintadas en rojo y blanco representando algas marinas sobre lienzo</p>
+              <h5 class="card-title">Algas Marinas</h5>
+              <p class="card-text">Cuadros Serie Océanos, inspirado en Hawaii.</p>
             </div>
           </div>
 
           <div class="card-bs">
-            <img src="../img/cuatro-oceanos.JPG" class="card-img-top" alt="Serie oceanos, cuatro cuadros de lineas pintadas en rojo y blanco representando algas marinas sobre lienzo">
+            <img src="../img/flores-hawaianas-oceano.jpeg" class="card-img-top" alt="Cuadro de la serie Océanos, flores de Hawaii, líneas pintadas en rojo y blanco, sobre lienzo">
             <div class="card-body">
-              <h5 class="card-title">Cuatro Oceanos</h5>
-              <p class="card-text">Serie oceanos, cuatro cuadros de lineas pintadas en rojo y blanco representando algas marinas sobre lienzo</p>
+              <h5 class="card-title">Flores de Hawaii</h5>
+              <p class="card-text">Cuadros Serie Océanos, inspirado en Hawaii.</p>
             </div>
           </div>
         </section>
