--- a/pages/help-center.html
+++ b/pages/help-center.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Valentina-arte ofrece servicios como workshops y clases de arte o directamente la comercialización de sus cuadros.">
+    <meta name="keywords" content="arte, art, cuadros, workshop de arte, clases de arte">
 
     <!-- Link de Bootstrap-->
 
@@ -11,7 +13,7 @@
      <!-- link a CSS -->
      <link rel="stylesheet" href="../css/style.css">
 
-    <title>Help Center</title>
+    <title> Help Center - VPV.art </title>
 </head>
 <body>
     <header>
@@ -50,16 +52,15 @@
     </header>
 
     <main> 
-        <h1> Servicios </h1>
+        <h1> Help Center </h1>
         
-        <p> La Artista brinda distintos tipos de Servicios, debajo se describen los mismos y en caso de solicitar alguno, se pueden contactar directamente con la línea telefónica de 0800-Artista.</p>
+        <p class="text-subtitle"> La Artista brinda distintos tipos de Servicios, debajo se describen los mismos y en caso de solicitar alguno, se pueden contactar directamente con la línea telefónica de 0800-Artista.</p>
         
-        <section class="help-center-section">
+        <section>
             <h2> Compra de Cuadros </h2>
-            <p> Si se desea comprar algún cuadro, se puede llamar directamente al teléfono, indicando el cuadro, y se procederá solicitando los datos. En caso de solicitar envíos, corren por cuenta del comprador</p>
-            <div class="help-center-sub-section">
-                <h3> Clases </h3>
-                <p> La Artista brinda clases en un centro de arte, ubicado en el barrio de Colegiales. Al comunicarse al teléfono, también pueden solicitar horarios, y días de las clases grupales.</p>
+            <p class="text-subtitle"> Si se desea comprar algún cuadro, se puede llamar directamente al teléfono, indicando el cuadro, y se procederá solicitando los datos. En caso de solicitar envíos, corren por cuenta del comprador.</p>
+            <div>
+                <p class="text-subtitle"> La Artista brinda clases en un centro de arte, ubicado en el barrio de Colegiales. Al comunicarse al teléfono, también pueden solicitar horarios, y días de las clases grupales.</p>
          </section>
 
          <!-- Bootrasp Section -->
@@ -68,29 +69,29 @@
 
          <section class="cards-section">
           <div class="card-bs">
-            <img src="../img/cuatro-oceanos.JPG" class="card-img-top" alt="Serie oceanos, cuatro cuadros de lineas pintadas en rojo y blanco representando algas marinas sobre lienzo">
+            <img src="../img/cuatro-oceanos.JPG" class="card-img-top" alt="Serie Océanos, cuatro cuadros de lineas pintadas en rojo y blanco representando algas marinas sobre lienzo">
             <div class="card-body">
-              <h5 class="card-title">Cuatro Oceanos</h5>
-              <p class="card-text">Serie oceanos, cuatro cuadros de lineas pintadas en rojo y blanco representando algas marinas sobre lienzo</p>
-              <a href="pages/products.html" class="btn btn-primary">Browse Products</a>
+              <h5 class="card-title">Cuatro Océanos</h5>
+              <p class="card-text">Cuadros Serie Océanos, inspirado en Hawaii.</p>
+              <a href="../pages/products.html" class="btn btn-primary">Browse Products</a>
             </div>
           </div>
 
           <div class="card-bs">
-            <img src="../img/cuatro-oceanos.JPG" class="card-img-top" alt="Serie oceanos, cuatro cuadros de lineas pintadas en rojo y blanco representando algas marinas sobre lienzo">
+            <img src="../img/algas-marinas-oceano.jpeg" class="card-img-top" alt="Cuadro de la serie Océanos, algas marinas, líneas pintadas en rojo y blanco, sobre lienzo">
             <div class="card-body">
-              <h5 class="card-title">Cuatro Oceanos</h5>
-              <p class="card-text">Serie oceanos, cuatro cuadros de lineas pintadas en rojo y blanco representando algas marinas sobre lienzo</p>
-              <a href="pages/products.html" class="btn btn-primary">Browse Products</a>
+              <h5 class="card-title">Algas Marinas</h5>
+              <p class="card-text">Cuadros Serie Océanos, inspirado en Hawaii.</p>
+              <a href="../pages/products.html" class="btn btn-primary">Browse Products</a>
             </div>
           </div>
 
           <div class="card-bs">
-            <img src="../img/cuatro-oceanos.JPG" class="card-img-top" alt="Serie oceanos, cuatro cuadros de lineas pintadas en rojo y blanco representando algas marinas sobre lienzo">
+            <img src="../img/flores-hawaianas-oceano.jpeg" class="card-img-top" alt="Cuadro de la serie Océanos, flores de Hawaii, líneas pintadas en rojo y blanco, sobre lienzo">
             <div class="card-body">
-              <h5 class="card-title">Cuatro Oceanos</h5>
-              <p class="card-text">Serie oceanos, cuatro cuadros de lineas pintadas en rojo y blanco representando algas marinas sobre lienzo</p>
-              <a href="pages/products.html" class="btn btn-primary">Browse Products</a>
+              <h5 class="card-title">Flores de Hawaii</h5>
+              <p class="card-text">Cuadros Serie Océanos, inspirado en Hawaii.</p>
+              <a href="../pages/products.html" class="btn btn-primary">Browse Products</a>
             </div>
           </div>
         </section>
